# ocp-ci-cd

./: Dockerfile  README.md  pyproject.toml
chart/: values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  role.yaml  rolebinding.yaml  route.yaml  serviceaccount.yaml
charts/mcp-server/: Chart.yaml  values.yaml
charts/mcp-server/templates/: deployment.yaml  role.yaml  service.yaml
src/mcp_ocp_server/: kubeconfig.py  runner.py  server.py  target_ns.py
src/mcp_ocp_server/tools/: git.py  helm.py  openshift.py
